# research-integrity-audit

./: .gitignore  README.md  pyproject.toml
src/research_integrity/: __init__.py  analysis.py  benchmark.py  cli.py  fixtures.py  ingest.py  models.py  store.py  verify.py
tests/: test_demo_pipeline.py  test_environment.py
