[project]
name = "research-integrity"
version = "0.1.0"
description = "Local research integrity audit engine prototype for evidence-backed insights."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "scikit-learn>=1.6.0",
    "typer>=0.15.0",
]

[project.scripts]
research-integrity = "research_integrity.cli:app"

[dependency-groups]
dev = [
    "hypothesis>=6.130.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_integrity"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
